# openfga-client

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  buf.gen.yaml  clippy.toml  justfile  release-plz.toml
.github/: dependabot.yml
.github/workflows/: audit.yaml  ci.yaml  release-plz.yml
src/: client_ext.rs  conversions.rs  display.rs  error.rs  lib.rs  migration.rs  model_client.rs
tests/model-manager/v1.0/: model.fga  schema.json
tests/model-manager/v1.1/: model.fga
tests/sample-store/custom-roles/: schema.json
tests/sample-store/entitlements/: schema.json
tests/sample-store/expenses/: schema.json
tests/sample-store/gdrive/: schema.json
tests/sample-store/github/: schema.json
tests/sample-store/iot/: schema.json
tests/sample-store/modular/: schema.json
tests/sample-store/slack/: schema.json
