[package]
name = "openfga-client"
version = "0.5.0"
edition = "2024"
license = "Apache-2.0"
description = "Type-safe client SDK for OpenFGA with optional Authorization Model management and Authentication (Bearer or Client Credentials)."
repository = "https://github.com/vakamo-labs/openfga-client.git"
authors = ["Christian Thiel"]
include = ["/src", "**/**.rs", "LICENSE", "README.md", "!tmp/**"]
resolver = "2"
rust-version = "1.88.0"

[features]
all = ["tls-rustls", "tls-native-roots", "auth-middle"]
tls-rustls = ["tonic/tls-aws-lc"]
tls-native-roots = ["tonic/tls-native-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]
auth-middle = ["dep:middle", "tower"]

[dependencies]
async-stream = "0.3"
futures = "0.3"
http = "1"
middle = { version = "0.4.0", optional = true, features = ["tonic"] }
prost = { version = "0.14", features = ["std"] }
prost-types = "0.14"
prost-wkt = "0.7"
prost-wkt-types = { version = "0.7", features = ["vendored-protoc"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "2.0" }
tonic = { version = "0.14", default-features = false, features = [
    "codegen",
    "transport"
] }
tonic-prost = "0.14"
tower = { version = "0.5", optional = true }
tracing = "0.1"
url = "2.5"

[dev-dependencies]
needs_env_var = "1.1.0"
pretty_assertions = "1.4"
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tracing-test = "0.2"
uuid = { version = "1.14", features = ["v7"] }
